...
                android:layout_below="@+id/PhoneLabel"
                android:layout_marginTop="10dp" />



            <android.support.v7.widget.AppCompatButton
                android:id="@+id/Agency_Save_Button"
                android:layout_width="106dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="230dp"
...
