...

            <Button
            android:id="@+id/btnStartDatePicker"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@id/AgencyInput"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="25dp"
...
